--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .description {
@@ -228,3 +228,5 @@
     transform: rotate(0deg);
   }
 }
+
+
